Initial 1.18 commit - NOT COMPILABLE!